--- a/app/assets/stylesheets/faq.css
+++ b/app/assets/stylesheets/faq.css
@@ -5,12 +5,11 @@
 
 .faq_box p {
   color: white;
-  background-color: rgba(0, 0, 14, 0.65);
-  border-radius: 3em;
-  font-family: 'Unica One', sans-serif;
+  background-color: rgba(40, 44, 44, 0.6);
+  font-family: 'Marmelad', sans-serif;
   font-size: 2.5em;
   margin-bottom: auto;
   width: 30em;
   margin: auto;
-  padding: 1.2em 1em;
+  padding: 1.2em 1.3em;
 }
