--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -2,36 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.h2_sign_up {
+.h2_sign_in_up {
   color: white;
   font-size: 3.25em;
   padding-top: 1.55em;
   padding-bottom: 1em;
 }
 
-.h2_sign_in {
-  color: white;
-  font-size: 3.25em;
-  padding-top: 1.55em;
-  padding-bottom: 1em;
-}
-
-.sign_up_box {
-  background-color: white;
-  font-size: 1.05em;
-  font-weight: bold;
-  text-align: center;
-  line-height: 1.85em;
-  border-radius: 3.5em;
-  width: 33em;
-  padding: 1.3em 1.7em;
-  margin: 1.5em auto 1.3em;
-  -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-}
-
-.sign_in_box {
+.sign_inup_box {
   background-color: white;
   font-size: 1.05em;
   font-weight: bold;
