--- a/app/assets/stylesheets/submissions.scss
+++ b/app/assets/stylesheets/submissions.scss
@@ -39,6 +39,11 @@ body {
   margin: 0em auto 3.846em;
 }
 
+.sign_inup_box .field,
+.sign_inup_box .actions {
+  width: auto;
+}
+
 .code_input {
   width: 47.692em;
   text-align: center;
